[package]
name = "hamshark"
version = "0.1.0"
edition = "2024"

[dependencies]
audio_thread_priority = "0.34.0"
cpal = { version = "0.16.0", features = ["audio_thread_priority"] }
directories = "6.0.0"
eframe = "0.32.1"
egui = { version = "0.32.1", features = ["color-hex"] }
env_logger = "0.11.8"
log = "0.4.28"
rfd = "0.15.4"
serde = "1.0.219"
thiserror = "2.0.16"
toml = "0.9.5"
